--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -23,15 +23,15 @@ items:
   items:
   - name: Zoomningsnivåer och rutnät
     href: zoom-levels-and-tile-grid.md
-  - name: Tjänstetäckning
+  - name: Täckning
     items:
-    - name: Geokodning
+    - name: Täckning för geokodning
       href: geocoding-coverage.md
-    - name: Trafik
+    - name: Trafiktäckning
       href: traffic-coverage.md
-    - name: Rendering
+    - name: Renderingstäckning
       href: render-coverage.md
-    - name: Routning
+    - name: Routningstäckning
       href: routing-coverage.md
   - name: Språk som stöds
     href: supported-languages.md
@@ -67,12 +67,14 @@ items:
       href: map-add-shape.md
     - name: Lägg till anpassat HTML
       href: map-add-custom-html.md
-    - name: Visa sökresultat
-      href: map-search-location.md
-    - name: Hämta information från en koordinat
-      href: map-get-information-from-coordinate.md
-    - name: Visa anvisningar från A till B
-      href: map-route.md
+    - name: Tjänster
+      items:
+      - name: Visa sökresultat
+        href: map-search-location.md
+      - name: Hämta information från en koordinat
+        href: map-get-information-from-coordinate.md
+      - name: Visa anvisningar från A till B
+        href: map-route.md
     - name: Visa trafik
       href: map-show-traffic.md
     - name: Interagera med mushändelser
@@ -157,9 +159,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
-ms.openlocfilehash: 9ff456a752ffecc3f4fa67fc8b85540833451fb5
-ms.sourcegitcommit: 0c64460a345c89a6b579b1d7e273435a5ab4157a
+ms.openlocfilehash: 0cf84e9b73831c1ead82f7cd01efb94ac312883d
+ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/31/2018
-ms.locfileid: "43339139"
+ms.lasthandoff: 09/06/2018
+ms.locfileid: "44022823"
