--- a/articles/azure-stack/user/TOC.yml
+++ b/articles/azure-stack/user/TOC.yml
@@ -98,6 +98,13 @@ items:
         href: azure-stack-kv-push-secret-into-vm.md
       - name: KeyVault-exempelprogram
         href: azure-stack-kv-sample-app.md
+    - name: Azure Stack-Övervakare
+      href: azure-stack-metrics-azure-data.md
+      items:
+      - name: Mått som stöds
+        href: azure-stack-metrics-supported.md
+      - name: Använda Azure-övervakningsdata
+        href: azure-stack-metrics-monitor.md
     - name: Lösningsmallar
       items:
       - name: Distribuera ett Service Fabric-kluster
@@ -181,9 +188,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 343847c800ce888cd211f6d2314af71c45189b50
-ms.sourcegitcommit: ebb460ed4f1331feb56052ea84509c2d5e9bd65c
+ms.openlocfilehash: 7bf5ef3ab2270d059a6d426cba3551cf21ce16e0
+ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/24/2018
-ms.locfileid: "42915380"
+ms.lasthandoff: 09/06/2018
+ms.locfileid: "44026721"
