--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -34,7 +34,9 @@ items:
   items:
   - name: Uppgradera till avancerad säkerhet
     href: security-center-onboarding.md
-  - name: Ange säkerhetsprincip
+  - name: Ange säkerhetsprinciper
+    href: security-center-azure-policy.md
+  - name: Inställningar för säkerhetsprincip
     href: security-center-policies-overview.md
     items:
     - name: Datainsamling
@@ -47,8 +49,6 @@ items:
       href: security-center-pricing.md
     - name: Säkerhetskonfigurationer
       href: security-center-customize-os-security-config.md
-    - name: Säkerhetsprincip med Azure-princip
-      href: security-center-azure-policy.md
     - name: Synlighet i hela klientorganisationen
       href: security-center-management-groups.md
   - name: Implementera säkerhetsrekommendationer
@@ -207,9 +207,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 62f713d5e0412eef2cb4dbb176e355371cbc924a
-ms.sourcegitcommit: 2ad510772e28f5eddd15ba265746c368356244ae
+ms.openlocfilehash: dc9c41fa829e26e4f77a9ef8a2baad423f02ffca
+ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/28/2018
-ms.locfileid: "43126410"
+ms.lasthandoff: 09/06/2018
+ms.locfileid: "44026368"
