--- a/articles/azure-stack/user/TOC.yml
+++ b/articles/azure-stack/user/TOC.yml
@@ -36,6 +36,8 @@ items:
   items:
   - name: Använda Azure Stack Portal
     href: azure-stack-use-portal.md
+  - name: Ansluta med PowerShell
+    href: azure-stack-powershell-configure-user.md
   - name: Använd Azure Stack API
     href: azure-stack-rest-api-use.md
   - name: Säkerhet och efterlevnad
@@ -58,6 +60,8 @@ items:
         href: azure-stack-vm-sizes.md
       - name: Hantera VM-diskar
         href: azure-stack-manage-vm-disks.md
+      - name: Överväganden för hanterade diskar
+        href: azure-stack-managed-disk-considerations.md
       - name: Skydda virtuella datorer
         href: azure-stack-manage-vm-protect.md
       - name: Överväganden för SQL Server-VM
@@ -188,9 +192,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 7bf5ef3ab2270d059a6d426cba3551cf21ce16e0
-ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
+ms.openlocfilehash: 2fe3061657d453f3a122195c4f1dcd3eeb259f09
+ms.sourcegitcommit: 2d961702f23e63ee63eddf52086e0c8573aec8dd
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "44026721"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44158713"
