--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -27,7 +27,7 @@ items:
     href: concept-authentication-methods.md
   - name: Konvergerad registrering
     href: concept-registration-mfa-sspr-converged.md
-  - name: Återställning av lösenord för självbetjäning
+  - name: Lösenordsåterställning
     items:
     - name: Så här fungerar lösenordsåterställning
       href: concept-sspr-howitworks.md
@@ -47,7 +47,7 @@ items:
       href: concept-mfa-whichversion.md
     - name: Licensiera dina användare
       href: concept-mfa-licensing.md
-    - name: Skapa en autentiseringsleverantör
+    - name: Hantera en autentiseringsleverantör
       href: concept-mfa-authprovider.md
     - name: Säkerhetsvägledning
       href: multi-factor-authentication-security-best-practices.md
@@ -64,9 +64,9 @@ items:
   expanded: true
 - name: Instruktionsguider
   items:
-  - name: Lösenordsåterställning
+  - name: Återställning av lösenord för självbetjäning
     items:
-    - name: Distribuera lösenordsåterställning
+    - name: Distribuera återställning av lösenord via självbetjäning
       href: howto-sspr-deployment.md
     - name: Förhandsregistrera autentiseringsdata
       href: howto-sspr-authenticationdata.md
@@ -211,9 +211,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: 39be14a49ecdf30d75cc49a37aa9fc7bc55304cc
-ms.sourcegitcommit: 0c64460a345c89a6b579b1d7e273435a5ab4157a
+ms.openlocfilehash: 83ad45c90c964df880c2b7fb79fcd3fdff214fbe
+ms.sourcegitcommit: af60bd400e18fd4cf4965f90094e2411a22e1e77
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/31/2018
-ms.locfileid: "43338953"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44091551"
