--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -57,7 +57,7 @@ items:
     href: /azure/event-hubs/event-hubs-managed-service-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
 - name: Instruktionsguider
   items:
-  - name: Konfigurera identitet för en virtuell Azure-dator
+  - name: Konfigurera hanterade identiteter på virtuella datorer
     items:
     - name: Portalen
       href: qs-configure-portal-windows-vm.md
@@ -71,7 +71,7 @@ items:
       href: qs-configure-rest-vm.md
     - name: Azure-SDK:er
       href: qs-configure-sdk-windows-vm.md
-  - name: Konfigurera identitet för Azure VMSS
+  - name: Konfigurera hanterade identiteter på VM-skalningsuppsättningar
     items:
     - name: Portalen
       href: qs-configure-portal-windows-vmss.md
@@ -83,7 +83,7 @@ items:
       href: qs-configure-template-windows-vmss.md
     - name: REST
       href: qs-configure-rest-vmss.md
-  - name: Använda en hanterad identitet för virtuell dator
+  - name: Använd hanterade identiteter på virtuella datorer
     items:
     - name: Hämta en åtkomsttoken
       href: how-to-use-vm-token.md
@@ -131,9 +131,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-msi
   - name: Forum för AAD-utvecklare
     href: https://feedback.azure.com/forums/169401-azure-active-directory/category/164757-developer-experiences
-ms.openlocfilehash: f64ce80ca45f847e76c5ec28e28a9271b19ed008
-ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
+ms.openlocfilehash: 44506baf79a9e5b5c35bca677968a312ec8aff15
+ms.sourcegitcommit: 2d961702f23e63ee63eddf52086e0c8573aec8dd
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "44029428"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44156918"
