--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -18,8 +18,12 @@ items:
   items:
   - name: Skapa ett krypterat lagringskonto
     href: resource-manager-tutorial-create-encrypted-storage-accounts.md
-  - name: Skapa flera resurser
+  - name: Skapa flera lagringskontoinstanser
+    href: resource-manager-tutorial-create-multiple-instances.md
+  - name: Ange resursdistributionsordning
     href: resource-manager-tutorial-create-templates-with-dependent-resources.md
+  - name: Skapa länkade mallar
+    href: resource-manager-tutorial-create-linked-templates.md
 - name: Begrepp
   items:
   - name: Resursprovidrar och resurstyper
@@ -109,6 +113,9 @@ items:
       href: resource-group-using-tags.md
     - name: Flytta resurser till ny grupp eller prenumeration
       href: resource-group-move-resources.md
+      items:
+      - name: Flytta support per resurstyp
+        href: move-support-resources.md
     - name: Skapa EA-prenumerationer
       href: programmatically-create-subscription.md
     - name: Bevilja åtkomst för att skapa EA-prenumerationer
@@ -219,9 +226,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 685aecbe4667b76f0ff6c44794294abf4e05cd24
-ms.sourcegitcommit: 3d0295a939c07bf9f0b38ebd37ac8461af8d461f
+ms.openlocfilehash: a7f0c89d6e44696024fa0b724130cbaee4d10829
+ms.sourcegitcommit: 2d961702f23e63ee63eddf52086e0c8573aec8dd
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "43841759"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44159443"
