--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -1,73 +1,84 @@
+items:
 - name: Dokumentation om API för textanalys
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är API för textanalys?
-      href: overview.md
+  - name: Vad är API för textanalys?
+    href: overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: 'C#'
-      href: quickstarts/csharp.md
-    - name: Go
-      href: quickstarts/go.md
-    - name: Java
-      href: quickstarts/java.md
-    - name: Node.js
-      href: quickstarts/nodejs.md
-    - name: PHP
-      href: quickstarts/php.md
-    - name: Python
-      href: quickstarts/python.md
-    - name: Ruby
-      href: quickstarts/ruby.md
+  - name: C#
+    href: quickstarts/csharp.md
+  - name: Go
+    href: quickstarts/go.md
+  - name: Java
+    href: quickstarts/java.md
+  - name: Node.js
+    href: quickstarts/nodejs.md
+  - name: PHP
+    href: quickstarts/php.md
+  - name: Python
+    href: quickstarts/python.md
+  - name: Ruby
+    href: quickstarts/ruby.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Textanalys med Power BI
-      href: Tutorials/tutorial-power-bi-key-phrases.md
-    - name: Textanalys i PowerApps
-      href: 'https://powerapps.microsoft.com/tutorials/cognitive-services-api/'
+  - name: Textanalys med Power BI
+    href: Tutorials/tutorial-power-bi-key-phrases.md
+  - name: Textanalys i PowerApps
+    href: https://powerapps.microsoft.com/tutorials/cognitive-services-api/
 - name: Instruktionsguider
   items:
-    - name: Registrera dig
-      href: How-tos/text-analytics-how-to-signup.md
-    - name: Hämta en åtkomstnyckel
-      href: How-tos/text-analytics-how-to-access-key.md
-    - name: 'Anropa API:t för textanalys'
-      href: How-tos/text-analytics-how-to-call-api.md
-    - name: Identifiera språk
-      href: How-tos/text-analytics-how-to-language-detection.md
-    - name: Analysera sentiment
-      href: How-tos/text-analytics-how-to-sentiment-analysis.md
-    - name: Extrahera nyckelfraser
-      href: How-tos/text-analytics-how-to-keyword-extraction.md
-    - name: Identifiera länkade entiteter
-      href: How-tos/text-analytics-how-to-entity-linking.md
-    - name: Arbeta med Visual Studio
-      items:
-        - name: Använda den anslutna tjänsten för textanalys
-          href: vs-text-connected-service.md
+  - name: Registrera dig
+    href: How-tos/text-analytics-how-to-signup.md
+  - name: Hämta en åtkomstnyckel
+    href: How-tos/text-analytics-how-to-access-key.md
+  - name: Anropa API:t för textanalys
+    href: How-tos/text-analytics-how-to-call-api.md
+  - name: Identifiera språk
+    href: How-tos/text-analytics-how-to-language-detection.md
+  - name: Analysera sentiment
+    href: How-tos/text-analytics-how-to-sentiment-analysis.md
+  - name: Extrahera nyckelfraser
+    href: How-tos/text-analytics-how-to-keyword-extraction.md
+  - name: Identifiera länkade entiteter
+    href: How-tos/text-analytics-how-to-entity-linking.md
+  - name: Arbeta med Visual Studio
+    items:
+    - name: Använda den anslutna tjänsten för textanalys
+      href: vs-text-connected-service.md
 - name: Referens
   items:
-    - name: API för textanalys
-      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics.V2.0/operations/56f30ceeeda5650db055a3c7'
+  - name: CLI-referens
+    href: https://docs.microsoft.com/en-us/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
+  - name: PowerShell-referens
+    href: https://aka.ms/azure-powershell-cognitiveservices
+  - name: API för textanalys
+    href: https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics.V2.0/operations/56f30ceeeda5650db055a3c7
 - name: Resurser
   items:
-    - name: Externt innehåll och community-innehåll
-      href: text-analytics-resource-external-community.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: text-analytics-resource-faq.md
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/text-analytics/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/text-analytics-api'
-    - name: Prenumerationsnyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=text-analytics'
-    - name: Språk som stöds
-      href: text-analytics-supported-languages.md
-    - name: Prova!
-      href: 'https://azure.microsoft.com/services/cognitive-services/text-analytics/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/555922-text-analytics'
+  - name: Externt innehåll och community-innehåll
+    href: text-analytics-resource-external-community.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: text-analytics-resource-faq.md
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/text-analytics/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/text-analytics-api
+  - name: Prenumerationsnyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=text-analytics
+  - name: Språk som stöds
+    href: text-analytics-supported-languages.md
+  - name: Prova!
+    href: https://azure.microsoft.com/services/cognitive-services/text-analytics/
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/555922-text-analytics
+ms.openlocfilehash: 46991531361582ad7d332a4f0ec49ffa9c4497ea
+ms.sourcegitcommit: 2d961702f23e63ee63eddf52086e0c8573aec8dd
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44160310"
