--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -218,10 +218,12 @@ items:
     items:
     - name: Övervaka din arbetsbelastning
       href: sql-data-warehouse-manage-monitor.md
-    - name: Återställ ditt informationslager
-      href: sql-data-warehouse-restore.md
     - name: Uppgradera till Gen2
       href: upgrade-to-latest-generation.md
+    - name: Övervaka Gen2-cache
+      href: sql-data-warehouse-how-to-monitor-cache.md
+    - name: Återställ ditt informationslager
+      href: sql-data-warehouse-restore.md
     - name: Automatisera prestandanivåer
       href: manage-compute-with-azure-functions.md
   - name: Integrera
@@ -278,9 +280,9 @@ items:
       href: sql-data-warehouse-partner-data-integration.md
     - name: Datahantering
       href: sql-data-warehouse-partner-data-management.md
-ms.openlocfilehash: e072fc928466617303a5dc44a17a2c2b7c33c2c0
-ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
+ms.openlocfilehash: f7669d3ce2274367ef9d2753bd9018f5ffc8cd97
+ms.sourcegitcommit: af60bd400e18fd4cf4965f90094e2411a22e1e77
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43782720"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44091619"
