--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -73,12 +73,21 @@ items:
       href: static-ip.md
     - name: Intern lastbalanserare
       href: internal-lb.md
-    - name: Ingångshändelser och TLS
-      href: ingress.md
+    - name: Ingress
+      items:
+      - name: Skapa en grundläggande kontrollant
+        href: ingress-basic.md
+      - name: Använda HTTP-programroutning
+        href: http-application-routing.md
+      - name: Använda internt nätverk
+        href: ingress-internal-ip.md
+      - name: Använda TLS med Let's Encrypt
+        href: ingress-tls.md
+        items:
+        - name: Använda en statisk offentlig IP-adress
+          href: ingress-static-ip.md
     - name: Utgående trafik
       href: egress.md
-    - name: Routning av HTTP-program
-      href: http-application-routing.md
   - name: Säkerhet och autentisering
     items:
     - name: Skapa tjänstens huvudnamn
@@ -162,9 +171,9 @@ items:
     href: https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: be17978b91f1664ea4917f7d9fcb0da5657d4832
-ms.sourcegitcommit: fab878ff9aaf4efb3eaff6b7656184b0bafba13b
+ms.openlocfilehash: d62907e0c9332975cb8361fc96698f75aa0f751d
+ms.sourcegitcommit: af9cb4c4d9aaa1fbe4901af4fc3e49ef2c4e8d5e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/22/2018
-ms.locfileid: "41944110"
+ms.lasthandoff: 09/11/2018
+ms.locfileid: "44345344"
