--- a/articles/chef/index.yml
+++ b/articles/chef/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 3fe9c3628dd914197c5b479197add5a6bd127e78
-ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
+ms.openlocfilehash: 87bef3568e45f3d966d90d980403c83c96aa461f
+ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43663510"
+ms.lasthandoff: 09/10/2018
+ms.locfileid: "44300876"
 documentType: LandingData
 title: Dokumentation om Chef Software på Azure
 metadata:
@@ -55,6 +55,6 @@ sections:
     - title: Chef Automate
       html: <p><a href="https://docs.chef.io/chef_automate.html">Översikt över Chef Automate</a></p> <p><a href="https://docs.chef.io/install_chef_automate.html">Installationsguide för Chef Automate</a></p> <p><a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate">Chef Automate på Azure Marketplace</a></p>
     - title: Chef Software-verktyg
-      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks">Chef Visual Studio Team Services-tillägg</a></p> <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks">Habitat Visual Studio Team Services-tillägg</a></p>
+      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks">Chef Azure DevOps-tillägg</a></p> <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks">Habitat Azure DevOps-tillägg</a></p>
     - title: Nyheter om Chef Software
       html: <p><a href="https://blog.chef.io/">Blogg om Chef Software</a></p>
