--- a/articles/cloudfoundry/toc.yml
+++ b/articles/cloudfoundry/toc.yml
@@ -1,29 +1,36 @@
+items:
 - name: Cloud Foundry-dokumentation
   href: index.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Marketplace-mall
-      href: 'https://azuremarketplace.microsoft.com/marketplace/apps/pivotal.pivotal-cloud-foundry'
+  - name: Marketplace-mall
+    href: https://azuremarketplace.microsoft.com/marketplace/apps/pivotal.pivotal-cloud-foundry
+  expanded: true
 - name: Självstudier
   items:
-    - name: Distribuera CF-app till Azure
-      href: /azure/virtual-machines/linux/cloudfoundry-deploy-your-first-app
-    - name: CloudFoundry på Azure
-      href: /azure/virtual-machines/linux/cloudfoundry-get-started
-    - name: Distribuera CF OMS Nozzle
-      href: /azure/cloudfoundry/cloudfoundry-oms-nozzle
-    - name: Integrera Cloud Foundry med Azure
-      href: /azure/cloudfoundry/how-cloud-foundry-integrates-with-azure
+  - name: Distribuera CF-app till Azure
+    href: /azure/virtual-machines/linux/cloudfoundry-deploy-your-first-app
+  - name: CloudFoundry på Azure
+    href: /azure/virtual-machines/linux/cloudfoundry-get-started
+  - name: Distribuera CF OMS Nozzle
+    href: /azure/cloudfoundry/cloudfoundry-oms-nozzle
+  - name: Integrera Cloud Foundry med Azure
+    href: /azure/cloudfoundry/how-cloud-foundry-integrates-with-azure
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Cloud Foundry-webbplats
-      href: 'https://docs.cloudfoundry.org/'
-    - name: Installera CF på Azure
-      href: 'https://docs.pivotal.io/pivotalcf/1-11/customizing/pcf_azure.html'
-    - name: Pivotal och Azure
-      href: 'https://pivotal.io/partners/microsoft'
-    - name: VSTS-pluginprogram för CF
-      href: 'https://github.com/Microsoft/vsts-cloudfoundry'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Cloud Foundry-webbplats
+    href: https://docs.cloudfoundry.org/
+  - name: Installera CF på Azure
+    href: https://docs.pivotal.io/pivotalcf/1-11/customizing/pcf_azure.html
+  - name: Pivotal och Azure
+    href: https://pivotal.io/partners/microsoft
+  - name: Azure DevOps-pluginprogram för CF
+    href: https://github.com/Microsoft/vsts-cloudfoundry
+ms.openlocfilehash: ee63fd4e7387777a042c41a8b457f2d9d0ace8e5
+ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/10/2018
+ms.locfileid: "44294247"
