--- a/articles/devops-project/index.yml
+++ b/articles/devops-project/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: dd941fcb57c358e33abe0da54ab8f76f2dccae28
+ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/10/2018
+ms.locfileid: "44295234"
 documentType: LandingData
 title: Azure DevOps-projekt
 metadata:
@@ -14,12 +20,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 07/06/2018
   ms.author: mlearned
-  ms.openlocfilehash: f9137634c6b2ec07364939cb965b4cabaf5bad3a
-  ms.sourcegitcommit: a1e1b5c15cfd7a38192d63ab8ee3c2c55a42f59c
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/10/2018
-  ms.locfileid: "37951931"
 abstract:
   description: Azure DevOps-projektet ger ett förenklat sätt att ta med befintlig kod och Git-lagringsplatser i Azure, eller välja ett av exempelprogrammen för att skapa en pipeline för kontinuerlig integration (CI) och kontinuerlig leverans (CD) till Azure.
   aside:
@@ -70,7 +70,7 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du använder Azure DevOps-projekt för att skapa pipeliner för VSTS-releaser
+    text: Lär dig hur du använder Azure DevOps-projekt för att skapa pipeliner för Azure-releaser
   - type: list
     style: ordered
     items:
