--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -1,117 +1,126 @@
+items:
 - name: Grunderna i Azure IoT
   href: /azure/iot-fundamentals
 - name: Dokumentation om Azure IoT Central
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är Azure IoT Central?
-      href: overview-iot-central.md
-    - name: IoT-lösningsalternativ
-      href: overview-iot-options.md
-    - name: Genomgång av användargränssnittet
-      href: overview-iot-central-tour.md
+  - name: Vad är Azure IoT Central?
+    href: overview-iot-central.md
+  - name: IoT-lösningsalternativ
+    href: overview-iot-options.md
+  - name: Genomgång av användargränssnittet
+    href: overview-iot-central-tour.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Skapa ett nytt program
-      href: quick-deploy-iot-central.md
+  - name: Skapa ett nytt program
+    href: quick-deploy-iot-central.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: 1 – Definiera en ny enhetstyp
-      href: tutorial-define-device-type.md
-    - name: 2 – Konfigurera regler
-      href: tutorial-configure-rules.md
-    - name: 3 – Anpassa operator-vyn
-      href: tutorial-customize-operator.md
-    - name: 4 – Övervaka dina enheter
-      href: tutorial-monitor-devices.md
-    - name: 5 – Lägg till en enhet
-      href: tutorial-add-device.md
+  - name: 1 – Definiera en ny enhetstyp
+    href: tutorial-define-device-type.md
+  - name: 2 – Konfigurera regler
+    href: tutorial-configure-rules.md
+  - name: 3 – Anpassa operator-vyn
+    href: tutorial-customize-operator.md
+  - name: 4 – Övervaka dina enheter
+    href: tutorial-monitor-devices.md
+  - name: 5 – Lägg till en enhet
+    href: tutorial-add-device.md
 - name: Begrepp
   items:
-    - name: Arkitektur
-      href: concepts-architecture.md
-    - name: Anslutning
-      href: concepts-connectivity.md
+  - name: Arkitektur
+    href: concepts-architecture.md
+  - name: Anslutning
+    href: concepts-connectivity.md
 - name: Instruktionsguider
   items:
-    - name: Administratör
-      items:
-        - name: Skapa och hantera ett program som molnlösningsleverantör
-          href: howto-create-and-manage-applications-as-CSP.md
-        - name: Administrera ditt program
-          href: howto-administer.md
-        - name: Exportera dina data
-          href: howto-export-data.md
-        - name: Visualisera dina data i Power BI
-          href: howto-connect-powerbi.md
-    - name: Builder
-      items:
-        - name: Konfigurera enhetsmallen
-          href: howto-set-up-template.md
-        - name: Version av enhetsmall
-          href: howto-version-devicetemplate.md
-        - name: Skapa regel för telemetri
-          href: howto-create-telemetry-rules.md
-        - name: Skapa en händelseregel
-          href: howto-create-event-rules.md
-        - name: Skapa webhook-åtgärder efter regler
-          href: howto-create-webhooks.md
-        - name: Bygga arbetsflöden i Microsoft Flow
-          href: howto-add-microsoft-flow.md
-        - name: Konfigurera startsidan
-          href: howto-configure-homepage.md
-        - name: Förbereda och ladda upp bilder
-          href: howto-prepare-images.md
-    - name: Operator
-      items:
-        - name: Hantera dina enheter
-          href: howto-manage-devices.md
-        - name: Använda enhetsuppsättningar
-          href: howto-use-device-sets.md
-        - name: Skapa anpassad analys
-          href: howto-create-analytics.md
-    - name: Enhetsutvecklare
-      items:
-        - name: Förbereda och ansluta ett (allmänt) Node.js-program
-          href: howto-connect-nodejs.md
-        - name: Förbereda och ansluta MXChip IoT DevKit
-          href: howto-connect-devkit.md
-        - name: Förbereda och ansluta Raspberry Pi (Python)
-          href: howto-connect-raspberry-pi-python.md
-        - name: 'Förbereda och ansluta Raspberry Pi (C#)'
-          href: howto-connect-raspberry-pi-csharp.md
-        - name: Förbereda och ansluta en Windows IoT Core-enhet
-          href: howto-connect-windowsiotcore.md
+  - name: Administratör
+    items:
+    - name: Skapa och hantera ett program som molnlösningsleverantör
+      href: howto-create-and-manage-applications-as-CSP.md
+    - name: Administrera ditt program
+      href: howto-administer.md
+    - name: Exportera dina data
+      href: howto-export-data.md
+    - name: Visualisera dina data i Power BI
+      href: howto-connect-powerbi.md
+  - name: Builder
+    items:
+    - name: Konfigurera enhetsmallen
+      href: howto-set-up-template.md
+    - name: Version av enhetsmall
+      href: howto-version-devicetemplate.md
+    - name: Skapa regel för telemetri
+      href: howto-create-telemetry-rules.md
+    - name: Skapa en händelseregel
+      href: howto-create-event-rules.md
+    - name: Skapa webhook-åtgärder efter regler
+      href: howto-create-webhooks.md
+    - name: Bygga arbetsflöden i Microsoft Flow
+      href: howto-add-microsoft-flow.md
+    - name: Utlösa Azure Functions
+      href: howto-trigger-azure-functions.md
+    - name: Konfigurera startsidan
+      href: howto-configure-homepage.md
+    - name: Förbereda och ladda upp bilder
+      href: howto-prepare-images.md
+  - name: Operator
+    items:
+    - name: Hantera dina enheter
+      href: howto-manage-devices.md
+    - name: Använda enhetsuppsättningar
+      href: howto-use-device-sets.md
+    - name: Skapa anpassad analys
+      href: howto-create-analytics.md
+  - name: Enhetsutvecklare
+    items:
+    - name: Förbereda och ansluta ett (allmänt) Node.js-program
+      href: howto-connect-nodejs.md
+    - name: Förbereda och ansluta MXChip IoT DevKit
+      href: howto-connect-devkit.md
+    - name: Förbereda och ansluta Raspberry Pi (Python)
+      href: howto-connect-raspberry-pi-python.md
+    - name: Förbereda och ansluta Raspberry Pi (C#)
+      href: howto-connect-raspberry-pi-csharp.md
+    - name: Förbereda och ansluta en Windows IoT Core-enhet
+      href: howto-connect-windowsiotcore.md
 - name: Relaterat
   items:
-    - name: Lösningar
-      items:
-        - name: IoT-lösningsacceleratorer
-          href: /azure/iot-suite
-        - name: IoT Central
-          href: /microsoft-iot-central
-    - name: Plattformstjänster
-      items:
-        - name: IoT Hub
-          href: /azure/iot-hub
-        - name: IoT Hub Device Provisioning Service
-          href: /azure/iot-dps
-        - name: Platsbaserade tjänster
-          href: /azure/location-based-services
-        - name: 'Tjänst-SDK:er'
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
-        - name: Time Series Insights
-          href: /azure/time-series-insights
-    - name: Edge
-      items:
-        - name: IoT Edge
-          href: /azure/iot-edge
-        - name: 'SDK:er för IoT-enheter'
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+  - name: Lösningar
+    items:
+    - name: IoT-lösningsacceleratorer
+      href: /azure/iot-suite
+    - name: IoT Central
+      href: /microsoft-iot-central
+  - name: Plattformstjänster
+    items:
+    - name: IoT Hub
+      href: /azure/iot-hub
+    - name: IoT Hub Device Provisioning Service
+      href: /azure/iot-dps
+    - name: Platsbaserade tjänster
+      href: /azure/location-based-services
+    - name: Tjänst-SDK:er
+      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
+    - name: Time Series Insights
+      href: /azure/time-series-insights
+  - name: Edge
+    items:
+    - name: IoT Edge
+      href: /azure/iot-edge
+    - name: SDK:er för IoT-enheter
+      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
 - name: Resurser
   items:
-    - name: Kunddataförfrågningar
-      href: iot-central-customer-data-requests.md
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/azure-iot-central'
+  - name: Kunddataförfrågningar
+    href: iot-central-customer-data-requests.md
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/azure-iot-central
+ms.openlocfilehash: 83afcefb0e8fa90253e917ba700644b21bb61100
+ms.sourcegitcommit: af9cb4c4d9aaa1fbe4901af4fc3e49ef2c4e8d5e
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/11/2018
+ms.locfileid: "44348930"
