--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -42,7 +42,7 @@ items:
     href: tutorial-azure-security.md
   - name: 13 – Distribuera Jenkins
     href: tutorial-jenkins-github-docker-cicd.md
-  - name: 14 – CI/CD med Team Services
+  - name: 14 – CI/CD med Azure Pipelines
     href: tutorial-build-deploy-jenkins.md
   - name: 15a – Skapa LAMP-stack
     href: tutorial-lamp-stack.md
@@ -441,6 +441,20 @@ items:
       items:
       - name: Använda internt DNS
         href: static-dns-name-resolution-for-linux-on-azure.md
+  - name: Konfigurera hanterade identiteter på virtuella datorer
+    items:
+    - name: Portalen
+      href: /azure/active-directory/managed-identities-azure-resources/qs-configure-portal-windows-vm?context=azure/virtual-machines/linux/context/linux-vm-context
+    - name: CLI
+      href: /active-directory/managed-identities-azure-resources/qs-configure-cli-windows-vm?context=azure/virtual-machines/linux/context/linux-vm-context
+    - name: PowerShell
+      href: /azure/active-directory/managed-identities-azure-resources/qs-configure-powershell-windows-vm?context=azure/virtual-machines/linux/context/linux-vm-context
+    - name: Azure Resource Manager-mall
+      href: /azure/active-directory/managed-identities-azure-resources/qs-configure-template-windows-vm?context=azure/virtual-machines/linux/context/linux-vm-context
+    - name: REST
+      href: /azure/active-directory/managed-identities-azure-resources/qs-configure-rest-vm?context=azure/virtual-machines/linux/context/linux-vm-context
+    - name: Azure-SDK:er
+      href: /azure/active-directory/managed-identities-azure-resources/qs-configure-sdk-windows-vm?context=azure/virtual-machines/linux/context/linux-vm-context
   - name: Använd VM-tillägg
     href: ../extensions/overview.md
   - name: Migrera virtuella datorer
@@ -551,9 +565,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 10eeab7d30e245a32ea166b26b173cd78f19a7b8
-ms.sourcegitcommit: 1fb353cfca800e741678b200f23af6f31bd03e87
+ms.openlocfilehash: 32b458dc63e09806f7369c031bcae555473358cf
+ms.sourcegitcommit: 465ae78cc22eeafb5dfafe4da4b8b2138daf5082
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/30/2018
-ms.locfileid: "43300900"
+ms.lasthandoff: 09/10/2018
+ms.locfileid: "44324911"
