--- a/articles/chef/index.yml
+++ b/articles/chef/index.yml
@@ -1,60 +1,54 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 87bef3568e45f3d966d90d980403c83c96aa461f
-ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/10/2018
-ms.locfileid: "44300876"
 documentType: LandingData
 title: Dokumentation om Chef Software på Azure
 metadata:
-  title: Dokumentation om Chef Software på Azure – självstudier, exempel, referenser och resurser
-  description: Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.
+  title: 'Dokumentation om Chef Software på Azure – självstudier, exempel, referenser och resurser'
+  description: 'Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.'
   ms.service: chef
-  keywords: chef, azure, devops, tutorials, samples, reference
+  keywords: 'chef, azure, devops, tutorials, samples, reference'
   author: tomarcher
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing page
   ms.date: 08/27/2018
 abstract:
-  description: Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.
+  description: 'Chef Software tillhandahåller en DevOps-plattform för automatisering för Linux och Windows som möjliggör hantering av både fysiska och virtuella serverkonfigurationer. Lär dig hur du använder Chef Software för att automatisera IaC-recept (infrastruktur som kod), och hantera och distribuera virtuella datorer på Azure med snabbstarter och självstudier.'
   aside:
     image:
       alt: Chef-logotyp
       height: 133
       width: 48
       src: media/chef.png
-    title: 
+    title: null
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Installera och konfigurera Chef, och använd det för att skapa en virtuell Linux-dator i Azure.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/media/index/azure_dev-9.svg
-      text: Installera och konfigurera Chef
-      href: ./chef-extension-portal.md
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du använder Chef Software-verktyg för att skapa och hantera beräknings- och nätverksinfrastruktur i Azure.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Installera och konfigurera Chef, och använd det för att skapa en virtuell Linux-dator i Azure.'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/media/index/azure_dev-9.svg
+            text: Installera och konfigurera Chef
+            href: ./chef-extension-portal.md
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/virtual-machines/windows/chef-automation">Automatisera distribution av virtuella Azure-datorer med Chef</a>.
-- title: Resurser och verktyg
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Lär dig hur du använder Chef Software-verktyg för att skapa och hantera beräknings- och nätverksinfrastruktur i Azure.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/virtual-machines/windows/chef-automation">Automatisera distribution av virtuella Azure-datorer med Chef</a>.
+  - title: Resurser och verktyg
     items:
-    - title: Chef Automate
-      html: <p><a href="https://docs.chef.io/chef_automate.html">Översikt över Chef Automate</a></p> <p><a href="https://docs.chef.io/install_chef_automate.html">Installationsguide för Chef Automate</a></p> <p><a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate">Chef Automate på Azure Marketplace</a></p>
-    - title: Chef Software-verktyg
-      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks">Chef Azure DevOps-tillägg</a></p> <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks">Habitat Azure DevOps-tillägg</a></p>
-    - title: Nyheter om Chef Software
-      html: <p><a href="https://blog.chef.io/">Blogg om Chef Software</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Chef Automate
+            html: '<p><a href="https://docs.chef.io/chef_automate.html">Översikt över Chef Automate</a></p> <p><a href="https://docs.chef.io/install_chef_automate.html">Installationsguide för Chef Automate</a></p> <p><a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate">Chef Automate på Azure Marketplace</a></p>'
+          - title: Chef Software-verktyg
+            html: '<p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks">Chef Azure DevOps-tillägg</a></p> <p><a href="https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks">Habitat Azure DevOps-tillägg</a></p>'
+          - title: Nyheter om Chef Software
+            html: '<p><a href="https://blog.chef.io/">Blogg om Chef Software</a></p>'
